# googlemock-extension

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/include/: Demo.h  MockDemo.h
examples/src/: Demo.cpp
examples/tests/: DemoTest.cpp
gmock-extension/: gmock-extension.h  gmock-helper.h  gmock-non-virtual.h
gmock-extension/include/: gmock-extension.h  gmock-helper.h  gmocke-hook-helper.h  gmocke-non-virtual.h
gmock-extension/src/: gmock-extension.cpp  gmocke-hook-helper.cpp
include/: Demo.h  MockDemo.h  gmock-extension.h
src/: Demo.cpp  DemoTest.cpp  JumpTest.cpp
tests/: CMakeLists.txt  Dummy.cpp  Dummy.h  ReplaceFunctionTest.cpp  ReplaceGlobalFunctionTest.cpp
